--- a/dream-tool-generator/src/main/resources/template/Controller.java.vm
+++ b/dream-tool-generator/src/main/resources/template/Controller.java.vm
@@ -18,6 +18,6 @@ import io.swagger.annotations.Api;
 @Api(tags = "${tableinfo.comments}API")
 @RestController
 @RequestMapping("${tableinfo.objectName}")
-public class ${tableinfo.className}Controller extends AbstractCrl<${tableinfo.className}, Long> {
+public class ${tableinfo.className}Controller extends ${common.baseController}<${tableinfo.className}> {
 
 }
