--- a/dream-tool-generator/src/main/resources/template/Controller.java.vm
+++ b/dream-tool-generator/src/main/resources/template/Controller.java.vm
@@ -3,9 +3,14 @@ package ${common.pathPackageController};
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import ${common.pathBasePackage}.AbstractController;
+#if(${common.baseController})
+import ${common.baseControllerPath};
 import ${common.pathPackageEntity}.${tableinfo.className};
+import ${common.pathPackageEntity}.${tableinfo.className};
+import ${common.pathPackageEntityDTO}.${tableinfo.className}DTO;
+import ${common.pathPackageQuery}.${tableinfo.className}Query;
 
+#end
 import io.swagger.annotations.Api;
 
 /**
@@ -18,6 +23,10 @@ import io.swagger.annotations.Api;
 @Api(tags = "${tableinfo.comments}API")
 @RestController
 @RequestMapping("${tableinfo.objectName}")
-public class ${tableinfo.className}Controller extends ${common.baseController}<${tableinfo.className}> {
+#if(${common.baseController})
+public class ${tableinfo.className}Controller extends ${common.baseController}<${tableinfo.className}, ${tableinfo.className}DTO, ${tableinfo.className}Query> {
+#else
+public class ${tableinfo.className}Controller {
+#end
 
 }
