--- a/dream-tool-generator/src/main/resources/template/Model.java.vm
+++ b/dream-tool-generator/src/main/resources/template/Model.java.vm
@@ -1,20 +1,24 @@
 package ${common.pathPackageEntity};
 
+import com.baomidou.mybatisplus.annotation.TableName;
 #if($common.baseEntity)
 import ${common.baseEntityPath};
 #end
-#if(${tableinfo.hasSort})
-import com.wy.database.annotation.Sort;
+#if(${tableinfo.entityHasSort})
+import com.wy.db.annotation.Sort;
 #end
-#if(${tableinfo.hasUnique})
-import com.wy.database.annotation.Unique;
+#if(${tableinfo.entityHasUnique})
+import com.wy.db.annotation.Unique;
 #end
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-#if(${tableinfo.hasBigDecimal})
+#if(${tableinfo.entityHasBigDecimal})
 import java.math.BigDecimal;
 #end
-#if(${tableinfo.hasDate})
+#if(${tableinfo.entityHasLocalDate})
+import java.time.LocalDate;
+#end
+#if(${tableinfo.entityHasLocalDateTime})
 import java.time.LocalDateTime;
 #end
 import lombok.AllArgsConstructor;
@@ -38,14 +42,16 @@ import lombok.experimental.SuperBuilder;
 @SuperBuilder
 @NoArgsConstructor
 @AllArgsConstructor
+@TableName("${tableinfo.tableName}")
 #if($common.baseEntity)
-public class ${tableinfo.className} extends AbstractModel {
+public class ${tableinfo.className} extends ${common.baseEntity} {
+
+	private static final long serialVersionUID = 1L;
 #else
 public class ${tableinfo.className} {
 #end
-
-	private static final long serialVersionUID = 1L;
 #foreach ($column in $columns)
+#if(!$column.excludeEntity)
 
 	/**
 	 * $column.comments
@@ -58,6 +64,7 @@ public class ${tableinfo.className} {
 	@Unique
 #end
 	private $column.attrType $column.attrNameLower;
+#end
 #end
 
 	/** 非数据库字段 */
