--- a/dream-tool-generator/src/main/resources/template/ModelQuery.java.vm
+++ b/dream-tool-generator/src/main/resources/template/ModelQuery.java.vm
@@ -1,14 +1,17 @@
-package ${common.pathPackageEntity}.query;
+package ${common.pathPackageQuery};
 
-import ${common.pathBasePackage}.BaseQuery;
+import ${common.baseQueryPath};
 
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-#if(${tableinfo.hasBigDecimal})
+#if(${tableinfo.queryHasBigDecimal})
 import java.math.BigDecimal;
 #end
-#if(${tableinfo.hasDate})
-import java.util.Date;
+#if(${tableinfo.queryHasLocalDate})
+import java.time.LocalDate;
+#end
+#if(${tableinfo.queryHasLocalDateTime})
+import java.time.LocalDateTime;
 #end
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -22,6 +25,7 @@ import lombok.experimental.SuperBuilder;
  * 
  * @author ${common.author}
  * @date ${datetime}
+ * @git ${common.git}
  */
 @ApiModel(description = "${tableinfo.comments}查询参数")
 @Getter
@@ -30,16 +34,17 @@ import lombok.experimental.SuperBuilder;
 @SuperBuilder
 @NoArgsConstructor
 @AllArgsConstructor
-public class ${tableinfo.className}Query extends BaseQuery {
+public class ${tableinfo.className}Query extends ${common.baseQuery} {
 
 	private static final long serialVersionUID = 1L;
-
 #foreach ($column in $columns)
+#if(!$column.excludeQuery)
 
 	/**
 	 * $column.comments
 	 */
 	@ApiModelProperty("$column.comments")
 	private $column.attrType $column.attrNameLower;
+#end
 #end
 }
