--- a/dream-tool-generator/src/main/resources/template/generatorConfig.xml.vm
+++ b/dream-tool-generator/src/main/resources/template/generatorConfig.xml.vm
@@ -5,7 +5,7 @@
 
 <generatorConfiguration>
 
-	<context id="demo" defaultModelType="flat" targetRuntime="MyBatis3">
+	<context id="demo" defaultModelType="flat" targetRuntime="MyBatis3Simple">
 
 		<property name="beginningDelimiter" value="`" />
 		<property name="endingDelimiter" value="`" />
