--- a/dream-tool-generator/src/main/resources/template/Mapper.java.vm
+++ b/dream-tool-generator/src/main/resources/template/Mapper.java.vm
@@ -12,7 +12,7 @@ import ${common.pathPackageEntity}.${tableinfo.className};
 import ${common.pathPackageQuery}.${tableinfo.className}Query;
 
 /**
- * ${tableinfo.comments}
+ * ${tableinfo.comments}数据层
  * 
  * @author ${common.author}
  * @date ${datetime}
